tests/baselines/reference/objectRest(strict=true).errors.txt
objectRest.ts(13,63): error TS2454: Variable 'nestedrest' is used before being assigned.
objectRest.ts(15,21): error TS7008: Member 'ka' implicitly has an 'any' type.
objectRest.ts(15,25): error TS7008: Member 'ki' implicitly has an 'any' type.
objectRest.ts(16,51): error TS2454: Variable 'complex' is used before being assigned.
objectRest.ts(17,46): error TS2454: Variable 'complex' is used before being assigned.
objectRest.ts(22,13): error TS2564: Property 'x' has no initializer and is not definitely assigned in the constructor.
objectRest.ts(23,15): error TS2564: Property 'y' has no initializer and is not definitely assigned in the constructor.
objectRest.ts(28,5): error TS2564: Property 'removed' has no initializer and is not definitely assigned in the constructor.
objectRest.ts(29,5): error TS2564: Property 'remainder' has no initializer and is not definitely assigned in the constructor.
objectRest.ts(43,8): error TS2537: Type '{ a: number; b: string; }' has no matching index signature for type 'string'.
objectRest.ts(43,35): error TS2537: Type '{ a: number; b: string; }' has no matching index signature for type 'string'.
objectRest.ts(43,57): error TS2403: Subsequent variable declarations must have the same type.  Variable 'o' must be of type '{ a: number; b: string; }', but here has type '{}'.
objectRest.ts(44,5): error TS2537: Type '{ a: number; b: string; }' has no matching index signature for type 'string'.
objectRest.ts(44,32): error TS2537: Type '{ a: number; b: string; }' has no matching index signature for type 'string'.
objectRest.ts(44,53): error TS2739: Type '{}' is missing the following properties from type '{ a: number; b: string; }': a, b


==== objectRest.ts (15 errors) ====
    var o = { a: 1, b: 'no' }
    var { ...clone } = o;
    var { a, ...justB } = o;
    var { a, b: renamed, ...empty } = o;
    var { ['b']: renamed, ...justA } = o;
    var { 'b': renamed, ...justA } = o;
    var { b: { '0': n, '1': oooo }, ...justA } = o;
    
    let o2 = { c: 'terrible idea?', d: 'yes' };
    var { d: renamed, ...d } = o2;
    
    let nestedrest: { x: number, n1: { y: number, n2: { z: number, n3: { n4: number } } }, rest: number, restrest: number };
    var { x, n1: { y, n2: { z, n3: { ...nr } } }, ...restrest } = nestedrest;
                                                                  ~~~~~~~~~~
!!! error TS2454: Variable 'nestedrest' is used before being assigned.
    
    let complex: { x: { ka, ki }, y: number };
                        ~~
!!! error TS7008: Member 'ka' implicitly has an 'any' type.
                            ~~
!!! error TS7008: Member 'ki' implicitly has an 'any' type.
    var { x: { ka, ...nested }, y: other, ...rest } = complex;
                                                      ~~~~~~~
!!! error TS2454: Variable 'complex' is used before being assigned.
    ({x: { ka, ...nested }, y: other, ...rest} = complex);
                                                 ~~~~~~~
!!! error TS2454: Variable 'complex' is used before being assigned.
    var { x, ...fresh } = { x: 1, y: 2 };
    ({ x, ...fresh } = { x: 1, y: 2 });
    
    class Removable {
        private x: number;
                ~
!!! error TS2564: Property 'x' has no initializer and is not definitely assigned in the constructor.
        protected y: number;
                  ~
!!! error TS2564: Property 'y' has no initializer and is not definitely assigned in the constructor.
        set z(value: number) { }
        get both(): number { return 12 }
        set both(value: number) { }
        m() { }
        removed: string;
        ~~~~~~~
!!! error TS2564: Property 'removed' has no initializer and is not definitely assigned in the constructor.
        remainder: string;
        ~~~~~~~~~
!!! error TS2564: Property 'remainder' has no initializer and is not definitely assigned in the constructor.
    }
    interface I {
        m(): void;
        removed: string;
        remainder: string;
    }
    var removable = new Removable();
    var { removed, ...removableRest } = removable;
    var i: I = removable;
    var { removed, ...removableRest2 } = i;
    
    let computed = 'b';
    let computed2 = 'a';
    var { [computed]: stillNotGreat, [computed2]: soSo,  ...o } = o;
           ~~~~~~~~
!!! error TS2537: Type '{ a: number; b: string; }' has no matching index signature for type 'string'.
                                      ~~~~~~~~~
!!! error TS2537: Type '{ a: number; b: string; }' has no matching index signature for type 'string'.
                                                            ~
!!! error TS2403: Subsequent variable declarations must have the same type.  Variable 'o' must be of type '{ a: number; b: string; }', but here has type '{}'.
!!! related TS6203 objectRest.ts:1:5: 'o' was also declared here.
    ({ [computed]: stillNotGreat, [computed2]: soSo, ...o } = o);
        ~~~~~~~~
!!! error TS2537: Type '{ a: number; b: string; }' has no matching index signature for type 'string'.
                                   ~~~~~~~~~
!!! error TS2537: Type '{ a: number; b: string; }' has no matching index signature for type 'string'.
                                                        ~
!!! error TS2739: Type '{}' is missing the following properties from type '{ a: number; b: string; }': a, b
    
    var noContextualType = ({ aNumber = 12, ...notEmptyObject }) => aNumber + notEmptyObject.anythingGoes;
    